# keywords_reply_bot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
src/: bot.rs  config.rs  database.rs  entities.rs  handlers.rs  lib.rs  main.rs
