[package]
name = "keywords_reply_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
frankenstein = { version = "0.44", features = ["client-reqwest"] }
sea-orm = { version = "1", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "1", features = [ "sqlx-sqlite", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.migration]
path = "migration"